# ocaml-smithy

./: README.md  aws-sdk.opam  dune  smithy.ml
aws-tests/: tests.json
